<resources>
    <string name="app_name">InAndOut</string>
    <string name="orderMenuTitle">Place an Order</string>
    <string name="doubleDouble">Double Double $3.60</string>
    <string name="cheeseBurger">Cheeseburger $2.15</string>
    <string name="frenchFries">French Fries $1.65</string>
    <string name="shakes">Shakes $2.20</string>
    <string name="fountainDrinks">Fountain Drinks (pick a size)</string>
    <string name="small">Small $1.45</string>
    <string name="medium">Medium $1.55</string>
    <string name="large">Large $1.75</string>
    <string name="placeOrderButton">Place Order</string>
    <string name="sampleText">Sample Text</string>
    <string name="startNewOrder">START NEW ORDER</string>
    <string name="secretOrderTitle">Place Secret Order</string>
    <string name="doubleMeat">Double Meat $2.85</string>
    <string name="threeByThree">3 X 3 $4.45</string>
    <string name="fourByFour">4 X 4 $5.50</string>
    <string name="grilledCheese">Grilled Cheese $2.35</string>
    <string name="proteinStyle">Protein Style $3.90</string>
    <string name="animalStyle">Animal Style $3.40</string>
</resources>
